--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(cubecunt)
 
 set(CMAKE_CXX_STANDARD 11)
 
+include_directories(include)
+
 include_directories(./librobotcontrol/library/include)
 
 file(GLOB lib_src "./librobotcontrol/library/src/*.c")
@@ -15,7 +17,7 @@ file(GLOB pru_src "./librobotcontrol/library/src/pru/*.c")
 
 add_library(robotcontrol SHARED ${lib_src} ${bmp_src} ${io_src} ${math_src} ${mpu_src} ${pru_src} )
 
-add_executable(cubecunt ./src/main.cpp)
+add_executable(cubecunt src/main.cpp src/bluebot.cpp)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
