--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ file(GLOB pru_src "./librobotcontrol/library/src/pru/*.c")
 add_library(robotcontrol SHARED ${lib_src} ${bmp_src} ${io_src} ${math_src} ${mpu_src} ${pru_src} )
 
 add_executable(cubecunt src/main.cpp src/pid.cpp src/bluebot.cpp)
+add_executable(rls_motor src/rls_motor.cpp src/pid.cpp src/bluebot.cpp)
 # add_executable(motor_test src/motor_test.cpp src/pid.cpp src/bluebot.cpp)
 # add_executable(pid_test src/pid_test.cpp src/pid.cpp)
 
